@@ -1,0 +1,166 @@
+# Doxyfile 1.1.5
+#
+# $Id$
+#
+
+PROJECT_NAME          = ACE_INet
+PROJECT_NUMBER        = Snapshot
+OUTPUT_DIRECTORY      = .
+OUTPUT_LANGUAGE       = English
+DISABLE_INDEX         = NO
+EXTRACT_ALL           = YES
+EXTRACT_PRIVATE       = YES
+EXTRACT_STATIC        = YES
+HIDE_UNDOC_MEMBERS    = NO
+HIDE_UNDOC_CLASSES    = NO
+BRIEF_MEMBER_DESC     = YES
+REPEAT_BRIEF          = YES
+ALWAYS_DETAILED_SEC   = NO
+FULL_PATH_NAMES       = NO
+STRIP_FROM_PATH       =
+INTERNAL_DOCS         = YES
+CLASS_DIAGRAMS        = YES
+SOURCE_BROWSER        = YES
+INLINE_SOURCES        = YES
+STRIP_CODE_COMMENTS   = NO
+CASE_SENSE_NAMES      = YES
+HIDE_SCOPE_NAMES      = NO
+VERBATIM_HEADERS      = YES
+SHOW_INCLUDE_FILES    = YES
+JAVADOC_AUTOBRIEF     = NO
+INHERIT_DOCS          = YES
+INLINE_INFO           = YES
+SORT_MEMBER_DOCS      = YES
+DISTRIBUTE_GROUP_DOC  = YES
+TAB_SIZE              = 8
+ENABLED_SECTIONS      =
+SHORT_NAMES           = YES
+
+#---------------------------------------------------------------------------
+# configuration options related to warning and progress messages
+#---------------------------------------------------------------------------
+
+QUIET                 = YES
+WARNINGS              = YES
+WARN_IF_UNDOCUMENTED  = YES
+WARN_FORMAT           = "$file:$line: $text"
+
+#---------------------------------------------------------------------------
+# configuration options related to the input files
+#---------------------------------------------------------------------------
+
+INPUT                 = protocols/ace/INet
+FILE_PATTERNS         = *.cpp *.h *.i *.inl
+RECURSIVE             = NO
+EXCLUDE               =
+EXCLUDE_PATTERNS      =
+EXAMPLE_PATH          =
+EXAMPLE_PATTERNS      =
+IMAGE_PATH            =
+INPUT_FILTER          =
+
+#---------------------------------------------------------------------------
+# configuration options related to the alphabetical class index
+#---------------------------------------------------------------------------
+
+ALPHABETICAL_INDEX    = YES
+COLS_IN_ALPHA_INDEX   = 1
+IGNORE_PREFIX         =
+
+#---------------------------------------------------------------------------
+# configuration options related to the HTML output
+#---------------------------------------------------------------------------
+
+GENERATE_HTML         = YES
+HTML_OUTPUT           = html/ace/inet
+HTML_HEADER           =
+HTML_FOOTER           =
+HTML_STYLESHEET       =
+HTML_ALIGN_MEMBERS    = YES
+GENERATE_HTMLHELP     = YES
+
+#---------------------------------------------------------------------------
+# configuration options related to the LaTeX output
+#---------------------------------------------------------------------------
+
+GENERATE_LATEX        = NO
+LATEX_OUTPUT          = latex
+COMPACT_LATEX         = NO
+PAPER_TYPE            = a4wide
+EXTRA_PACKAGES        =
+LATEX_HEADER          =
+PDF_HYPERLINKS        = NO
+LATEX_BATCHMODE       = NO
+
+#---------------------------------------------------------------------------
+# configuration options related to the RTF output
+#---------------------------------------------------------------------------
+
+GENERATE_RTF          = NO
+RTF_OUTPUT            = rtf
+COMPACT_RTF           = NO
+RTF_HYPERLINKS        = NO
+RTF_STYLESHEET_FILE   =
+
+#---------------------------------------------------------------------------
+# configuration options related to the man page output
+#---------------------------------------------------------------------------
+
+GENERATE_MAN          = NO
+MAN_OUTPUT            = man
+MAN_EXTENSION         = .3
+
+#---------------------------------------------------------------------------
+# Configuration options related to the preprocessor
+#---------------------------------------------------------------------------
+
+ENABLE_PREPROCESSING  = YES
+MACRO_EXPANSION       = YES
+EXPAND_ONLY_PREDEF    = YES
+SEARCH_INCLUDES       = YES
+INCLUDE_PATH          = .
+PREDEFINED            = __ACE_INLINE__ \
+                        ACE_TEMPLATES_REQUIRE_SOURCE \
+                        ACE_BEGIN_VERSIONED_NAMESPACE_DECL \
+                        ACE_END_VERSIONED_NAMESPACE_DECL \
+                        ACE_INLINE=inline
+EXPAND_AS_DEFINED     = ACE_RCSID \
+                        ACE_UNIMPLEMENTED_FUNC \
+                        ACE_CACHE_MAP_MANAGER \
+                        ACE_THROW_SPEC
+
+#---------------------------------------------------------------------------
+# Configuration::additions related to external references
+#---------------------------------------------------------------------------
+
+TAGFILES              = html/ace/ACE.tag=..
+GENERATE_TAGFILE      = html/ace/inet/ACE_INet.tag
+ALLEXTERNALS          = NO
+PERL_PATH             = /usr/bin/perl
+
+#---------------------------------------------------------------------------
+# Configuration options related to the dot tool
+#---------------------------------------------------------------------------
+
+# If you set the HAVE_DOT tag to YES then doxygen will assume the dot tool is
+# available from the path. This tool is part of Graphviz
+
+HAVE_DOT              = YES
+CLASS_GRAPH           = YES
+COLLABORATION_GRAPH   = YES
+INCLUDE_GRAPH         = NO
+INCLUDED_BY_GRAPH     = NO
+GRAPHICAL_HIERARCHY   = YES
+DOT_MULTI_TARGETS     = YES
+MAX_DOT_GRAPH_DEPTH   = 3
+
+# The tag DOT_PATH can be used to specify the path where the dot tool can be
+# found. If left blank, it is assumed the dot tool can be found on the path.
+DOT_PATH              =
+
+#---------------------------------------------------------------------------
+# Configuration::additions related to the search engine
+#---------------------------------------------------------------------------
+
+SEARCHENGINE          = YES
+
