@@ -40,6 +40,10 @@
     </li>
 
     <li>
+      <p><a href="ace/inet/index.html">ACE INet library</a></p>
+    </li>
+
+    <li>
       <p><a href="tao/index.html">The TAO library and
       components</a></p>
     </li>
